package pho.hash.core;

public interface Hasher {

    int calculateHash(String string);

}
