@startuml

package pho.hash.core {
    interface Hasher {
        + calculateHash()
    }

    package folding {
        class FoldingHash {
            + calculateHash()
        }

        enum GroupSize {
            + TWO
            + THREE
            + AUTO
            - calculator
            + calculate(size)
        }

        class GroupList {
            public iterator()
        }

        class GroupIterator {
            - source
            - groupSize
            + hasNext()
            + next()
        }
    }
}

Hasher <|-- FoldingHash

FoldingHash -- GroupSize
FoldingHash -- GroupList
GroupList -- GroupIterator


@enduml